kubernetes/todos-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
        - name: todos-api
          image: docker.io/lacragh/todos-api:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: todos-api
